--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "2.0.0-rc.1",
     "@angular/platform-browser-dynamic": "2.0.0-rc.1",
     "@angular/router": "2.0.0-rc.1",
+    "angular2-highcharts": "^0.1.0",
+    "highcharts": "^4.2.5",
     "angular2-ie9-shims": "0.0.1",
     "es6-shim": "^0.35.0",
     "html5-history-api": "^4.2.7",
